0.6-2

o fitOdeModel supports now PORT algorithm (nlminb)
o documentation improvements
o first version of "simecol-howto"


0.6-1

o start writing new vignette "simecol-howto"
o data frame conversion for outputs of class odeModel now only for matrices and
in out, not in sim.

0.6

o new class indbasedModel
o new slot "observer"
o .Rdata files re-generated (with observer slot)
o simulation re-initializes objects that have an initfunc
o example of an ODE model that passes compiled code directly to the solver
o this is the useR!2008 (Dortmund) release 

0.5-7

o the package uses now deSolve instead of odesolve
o euler is now imported from deSolve and removed from simecol
o allow solver slot to contain not only character but also function
o plain version of JSS publication added as vignette

0.5-6

o small improvements and updates 

0.5-5

o reworked ODE solvers, rk4 and lsoda generics removed,
  solvers are now called directly from sim,
  ensures compatibility with the desolve package without
  the need to write generics for all possible (and future)
  ode solvers
o rehabilitation of addtoenv()
o documentation updates
o replacement functions now delete slot "out"

0.5-4

o experimental code for parameter fitting of ODE models

0.5-3

o added citation to JSS article about simecol
o removed obsolete \non_function{} entry from documentation
o conversion of simObj to and from lists, as.list and as.simObj
o bivariate uniform random numbers (Plackett distribution)

0.5-2

o tcltk is now Suggested again 
  (possible due to relaxed package check conditions)

0.5-1

o fixed obsolete braces in .Rd's

0.5

o tcltk is now mandatory (in Depends), to solve issue
  with package check under R 2.6.0 (under development)
o check for empty out-slot in plot methods
o obsolete comments removed
o small documentation updates
  - addtoenv may be removed in the future
o version 0.5 is used in the upcoming JSS article

0.4-3

o addtoenv() is no longer used in the solver functions